package com.example.sagivproject.models;

import androidx.annotation.NonNull;

/**
 * Represents a daily motivational tip or health advice for the user.
 * <p>
 * This model holds the content of the tip and uses the date (yyyy-MM-dd) as its unique identifier.
 * Tips are either fetched from the database or generated by AI if no tip exists for the current day.
 * </p>
 */
public class TipOfTheDay implements Idable {
    private String id;
    private String tip;

    /**
     * Default constructor required for Firebase deserialization.
     */
    public TipOfTheDay() {
    }

    /**
     * Constructs a new TipOfTheDay.
     *
     * @param tip The content of the tip.
     * @param id  The date string (yyyy-MM-dd) used as the unique identifier.
     */
    public TipOfTheDay(String tip, String id) {
        this.tip = tip;
        this.id = id;
    }

    @Override
    public String getId() {
        return id;
    }

    @Override
    public void setId(String id) {
        this.id = id;
    }

    /**
     * @return The content of the tip.
     */
    public String getTip() {
        return tip;
    }

    public void setTip(String tip) {
        this.tip = tip;
    }

    @NonNull
    @Override
    public String toString() {
        return "TipOfTheDay{" +
                "id='" + id + '\'' +
                ", tip='" + tip + '\'' +
                '}';
    }
}
