@startuml
class models.Medication {
- String id
- String name
- String details
- MedicationType type
- List<String> reminderHours
+ String getId()
+ void setId(String)
+ String getName()
+ void setName(String)
+ String getDetails()
+ void setDetails(String)
+ MedicationType getType()
+ void setType(MedicationType)
+ List<String> getReminderHours()
+ void setReminderHours(List<String>)
+ String toString()
}


enum models.MedicationType {
+  PILL
+  HALF_TABLET
+  SYRUP
+  CREAM
+  INJECTION
+  VITAMIN
+  DROPS_FOR_SWALLOWING
+  EYE_DROPS
+  EAR_DROPS
- String displayName
+ String getDisplayName()
}


class models.TipOfTheDay {
- String id
- String tip
+ String getId()
+ void setId(String)
+ String getTip()
+ void setTip(String)
+ String toString()
}


class models.User {
- {static} int YEAR
- String id
- String email
- UserRole role
- String firstName
- String lastName
- String birthDate
- String password
- String profileImage
- HashMap<String,Medication> medications
- HashMap<String,DailyStats> dailyStats
- HashMap<String,EmergencyContact> emergencyContacts
+ String getId()
+ void setId(String)
+ String getFirstName()
+ void setFirstName(String)
+ String getLastName()
+ void setLastName(String)
+ String getBirthDate()
+ void setBirthDate(String)
+ int getAge()
+ String getEmail()
+ void setEmail(String)
+ String getPassword()
+ void setPassword(String)
+ UserRole getRole()
+ void setRole(UserRole)
+ boolean isAdmin()
+ String getProfileImage()
+ void setProfileImage(String)
+ HashMap<String,Medication> getMedications()
+ void setMedications(HashMap<String,Medication>)
+ HashMap<String,DailyStats> getDailyStats()
+ void setDailyStats(HashMap<String,DailyStats>)
+ DailyStats getTodayStats()
+ HashMap<String,EmergencyContact> getEmergencyContacts()
+ void setEmergencyContacts(HashMap<String,EmergencyContact>)
+ String getFullName()
+ boolean equals(Object)
+ int hashCode()
+ String toString()
}


enum models.UserRole {
+  REGULAR
+  ADMIN
}

class models.MedicationUsage {
- String id
- String medicationId
- String time
- String scheduledTime
- MedicationStatus status
+ String getMedicationId()
+ void setMedicationId(String)
+ String getTime()
+ void setTime(String)
+ String getScheduledTime()
+ void setScheduledTime(String)
+ MedicationStatus getStatus()
+ void setStatus(MedicationStatus)
+ String getId()
+ void setId(String)
+ String toString()
}


enum models.MedicationStatus {
+  TAKEN
+  NOT_TAKEN
+  SNOOZED
- String displayName
+ String getDisplayName()
}




models.Idable <|.. models.Medication
models.Idable <|.. models.TipOfTheDay
models.Idable <|.. models.User
models.Idable <|.. models.MedicationUsage
@enduml